update button to say show/hide summary

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -15,7 +15,7 @@
 		transition: margin 0.2s ease
 
 .spoilerbutton
-	&[value="Show"] + .spoiler > div
+	&[value="Show Summary"] + .spoiler > div
 		margin-top: -100%
-	&[value="Hide"] + .spoiler
+	&[value="Hide Summary"] + .spoiler
 		padding: 5px
