--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4316,10 +4316,10 @@ label.panel-block {
     -o-transition: all 0.2s ease;
     transition: margin 0.2s ease; }
 
-.spoilerbutton[value="Show"] + .spoiler > div {
+.spoilerbutton[value="Show Summary"] + .spoiler > div {
   margin-top: -100%; }
 
-.spoilerbutton[value="Hide"] + .spoiler {
+.spoilerbutton[value="Hide Summary"] + .spoiler {
   padding: 5px; }
 
 /*# sourceMappingURL=style.css.map */
