--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
 			.container
 				h1.title= val.doc.title
 				h2.subtitle= 'From ' + val.doc.meta.title
-				a(href=val.doc.origlink) View Story
+				a(href=val.doc.origlink target="_blank") View Story
 				input.is-primary.is-bold.button.spoilerbutton(type='button', value='Show Summary', onclick="this.value=this.value=='Show Summary'?'Hide Summary':'Show Summary';")
 				.spoiler
 					if val.doc.image.url
@@ -20,3 +20,4 @@ block content
 						div= val.doc.description.replace(/<[^>]+>/g, '')
 					else
 						div= val.doc.description.replace(/<[^>]+>/g, '')
+		hr
