--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 /*! bulma.io v0.4.2 | MIT License | github.com/jgthms/bulma */
+@import url(font-awesome-4.7.0/css/font-awesome.css);
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
@@ -4317,9 +4318,20 @@ label.panel-block {
     transition: margin 0.2s ease; }
 
 .spoilerbutton[value="Show Summary"] + .spoiler > div {
-  margin-top: -100%; }
+  margin-top: -100%;
+  display: none; }
 
 .spoilerbutton[value="Hide Summary"] + .spoiler {
   padding: 5px; }
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 50px;
+  width: 80px;
+  height: 25px;
+  text-align: center; }
+  .scroll-to-top:hover {
+    text-decoration: none; }
 
 /*# sourceMappingURL=style.css.map */
