--- a/views/index.pug
+++ b/views/index.pug
@@ -15,9 +15,8 @@ block content
 				a(href=val.doc.origlink target="_blank") View Story
 				input.is-primary.is-bold.button.spoilerbutton(type='button', value='Show Summary', onclick="this.value=this.value=='Show Summary'?'Hide Summary':'Show Summary';")
 				.spoiler
-					if val.doc.image.url
-						img(src=val.doc.image.url)
-						div= val.doc.description.replace(/<[^>]+>/g, '')
-					else
-						div= val.doc.description.replace(/<[^>]+>/g, '')
+					div= val.doc.description.replace(/<[^>]+>/g, '')
 		hr
+	.scroll-to-top
+		a.button.is-primary(onclick="window.scrollTo(0, 0)")
+			i.fa.fa-arrow-circle-up(aria-hidden="true")
