--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,6 @@ html
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		script(src="https://cdn.auth0.com/js/lock/10.16/lock.min.js")
+		script(src="https://code.jquery.com/jquery-3.2.1.min.js")
 	body
 		block content
