--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
 				h1.title= title
 				h2.subtitle Welcome to #{title}
 				a.button(href="/addfeed") Add Feed
-				button.button(onclick="window.location.reload()") Refresh
+				button.button(onclick="$.ajax({url: '/', method: 'POST', data: {}}).then(data => {console.log(data)})") Refresh
 	each val,ind in docs
 		.box
 			.container
