--- a/views/login.pug
+++ b/views/login.pug
@@ -5,14 +5,26 @@ block content
 	div(id="root" style="width: 280px; margin: 40px auto; padding: 10px;")
 
 	script.
-		// Construct an instance of Auth0Lock with your clientId and aut0 domain name
-		var lock = new Auth0Lock('#{env.AUTH0_CLIENT_ID}', '#{env.AUTH0_DOMAIN}',{ auth: {
-			redirectUrl: '#{env.AUTH0_CALLBACK_URL}'
-			, responseType: 'code'
-			, params: {
-				scope: 'openid name email picture'
+		const authOpts = {
+			theme: {
+				logo: 'http://i.imgur.com/5adyB1C.png',
+				primaryColor: '#31324F'
+			},
+			languageDictionary: {
+				emailInputPlaceholder: "me@me.com",
+				title: "Sign in",
+				loginSubmitLabel: "Give Me RSS!"
+			},
+			auth: {
+				redirectUrl: '#{env.AUTH0_CALLBACK_URL}',
+				responseType: 'code',
+				params: {
+					scope: 'openid name email picture'
+				}
 			}
-		}});
+		}
+		// Construct an instance of Auth0Lock with your clientId and aut0 domain name
+		var lock = new Auth0Lock('#{env.AUTH0_CLIENT_ID}', '#{env.AUTH0_DOMAIN}', authOpts);
 
 		// Show lock's login widget
 		lock.show();
