--- a/views/index.pug
+++ b/views/index.pug
@@ -15,9 +15,9 @@ block content
 				- var pubdate = dates[ind]
 				h2.subtitle= 'From ' + val.doc.meta.title + ' (' + pubdate + ')'
 				if val.doc.origlink
-					a(href=val.doc.origlink target="_blank") View Story
+					a.button.is-info(style="float: right" href=val.doc.origlink target="_blank") View Story
 				else
-					a(href=val.doc.link target="_blank") View Story
+					a.button.is-info(style="float: right" href=val.doc.link target="_blank") View Story
 				input.is-primary.is-bold.button.spoilerbutton(type='button', value='Show Summary', onclick="this.value=this.value=='Show Summary'?'Hide Summary':'Show Summary';")
 				.spoiler
 					div= val.doc.description.replace(/<[^>]+>/g, '')
